Fixed nav bar links  and formatted the events table to handle overflow of text

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,12 @@ body{
   padding-top: 70px;
 }
 
+.table {
+  table-layout:fixed;
+}
+
+.table-row-text{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
